Applying settings problems fixed. for now.